Update Pentaho v5.4 development environment setup.md